Fixed hero align

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,10 +1,9 @@
 @import '../../main.scss';
 
 .hero {
- display: flex;
+  display: flex;
   justify-content: center;
- background-color: var(--mainBgColorWhite);
-  padding-top: 132px;
+  background-color: var(--mainBgColorWhite);
 
   position: relative;
   min-width: 375px;
